Remove SSL configuration options for the backend as long as SSL is not implemented.

--- a/configuration.yml
+++ b/configuration.yml
@@ -171,8 +171,8 @@ typo3_languages:
   - de
 
 typo3_configuration:
-  - {key: BE/lockSSL, value: true}
-  - {key: SYS/cookieSecure, value: 1}
+  # - {key: BE/lockSSL, value: true}
+  # - {key: SYS/cookieSecure, value: 1}
   - {key: BE/debug, value: 1}
   - {key: FE/debug, value: 1}
   - {key: SYS/devIPmask, value: \*}
